	PR c++/84596 	* constexpr.c (require_rvalue_constant_expression): New function. 	* cp-tree.h: Declare it. 	* semantics.c (finish_static_assert): Use it instead of 	require_potential_rvalue_constant_expression.

* g++.dg/cpp0x/static_assert14.C: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@258107 138bc75d-0d04-0410-961f-82ee72b054a4